--- a/scott-1980/scott-1980.tex
+++ b/scott-1980/scott-1980.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \usepackage{eulervm}
 \usepackage{mathpartir}
 \usepackage[bb=pazo]{mathalpha}
+\usepackage{stmaryrd}
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/cmrsum}
@@ -43,9 +44,6 @@ bookmarksopenlevel=10
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
 %\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
-\usepackage[numbers]{natbib}
-%\setcitestyle{numbers}
-\bibliographystyle{unsrtnat}
 \date{}
 \def\to{\rightarrow}
 \def\union{\cup}
@@ -55,7 +53,15 @@ bookmarksopenlevel=10
 \def\id{{\rm 1}}
 \def\comp{\circ}
 \def\bbone{\mathbb 1}
-\def\bbzero{0}
+\def\zeromap{0}
+\def\bbzero{{\mathbb O}}
+\def\ccc{{c.c.c.}}
+\def\ep{\varepsilon}
+\def\ebc{\varepsilon_{BC}}
+\def\L{\Lambda}
+\def\l{\lambda}
+\def\lm#1.#2{\lambda#1.\, #2}
+\def\br#1{[\, #1 \, ]}
 
 \title{Relating Theories of the $\lambda$-Calculus}
 \author{Dana Scott \\
@@ -70,12 +76,12 @@ bookmarksopenlevel=10
 
 \medskip
 \noindent
-Mathematical theories arise for many different reasons, sometimes in connection with specific applications and often owing to accidental inspiration. From time to time we ought to ask ourselves concerning our theories where should they have come from; usually the answer will have little to do with the exact historical development. The $\lambda$-calculus is, I feel, a case in point. In Scott (1980), in the Kleene Festschrift, I made up a story of where the theory of type-free $\lambda$-calculus could have come from. Any number of people who heard my lec­ture and read the manuscript were cross with me. They said ``But it didn't develop that way! And besides we doubt it ever would have.'' But this reaction misses the point of my story. I shall not, however repeat the earlier story here, for the point of the present paper is different. For those people who do not like to discuss philosophy --- even Philosophy of Mathematics --- my remarks here can be taken as a suggestion of how to group diverse models of $\lambda$-calculus rather uniformly under a general scheme. The scheme is by now rather well known and not at all original with me. What I hope can be regarded as a useful con­tribution is my putting of the ideas in a certain order. As I consider the order to be a natural one, I feel there is a philosophical significance to my activity; but I should not want to force this view on anyone.
+Mathematical theories arise for many different reasons, sometimes in connection with specific applications and often owing to accidental inspiration. From time to time we ought to ask ourselves concerning our theories where should they have come from; usually the answer will have little to do with the exact historical development. The $\l$-calculus is, I feel, a case in point. In Scott (1980), in the Kleene Festschrift, I made up a story of where the theory of type-free $\l$-calculus could have come from. Any number of people who heard my lec­ture and read the manuscript were cross with me. They said ``But it didn't develop that way! And besides we doubt it ever would have.'' But this reaction misses the point of my story. I shall not, however repeat the earlier story here, for the point of the present paper is different. For those people who do not like to discuss philosophy --- even Philosophy of Mathematics --- my remarks here can be taken as a suggestion of how to group diverse models of $\l$-calculus rather uniformly under a general scheme. The scheme is by now rather well known and not at all original with me. What I hope can be regarded as a useful con­tribution is my putting of the ideas in a certain order. As I consider the order to be a natural one, I feel there is a philosophical significance to my activity; but I should not want to force this view on anyone.
 
 \section{Theories of Functions}
 
 
-Everyone agrees that $\lambda$-calculus is a theory of functions.
+Everyone agrees that $\l$-calculus is a theory of functions.
 But we must ask: ``What kind of a theory?'' And also: ``Have we got the best theory?'' Personally, I think we should also in­quire: ``How does it relate to other theories?'' I certainly find many discussions far too silent on this last issue. Well, what other theories are there? Certainly set theory comes to mind at once, and no set theory would be worth its salt if it did not provide a theory of functions. Let us not try to catalogue the various known theories here but look at a theory in the style of Zermelo --- and we do not have even to be too specific, since in any case such a theory is very standard. What is ``unsatisfactory'' about Zermelo's theory is the limiti­zation-of-size view of sets: any {\it one} set $A$ is extremely small compared to the size of $V$, the class or universe of all sets. Thus, functions $f : A \to B$ mapping one set $A$ into another set $B$ tell us very little about operations on all sets, maps on $V$ into $V$. We therefore have an urge to ``improve'' our set theory by constructing a class theory. Sets are elements $A \in V$; while classes are sub-collections $B \subseteq V$. As $V$ is (by the usual assump­tions) so highly closed under so many operations, we have no difficulty in construing certain classes as maps $F: V \to V$. For example for all $X \in V$ we could have $F(X) = \{X\}$ or $F(X) = A \times X$ (where $A$ is a fixed set).
 
 The passage from sets to classes is a familiar and useful move in the formalization of the theory: many things can be done generally for classes and then specialized to sets. And having a notation for functions defined on all sets is in many cases a great advantage. But wait. What about operations on classes? What should we say about them? Given any two classes $A$ and $B$, we can form their union, $A \union  B$. The operation, $\union\!: V \times V \to V$, of union of {\it sets} does not directly apply to {\it classes} even though there is a connection. Do we also want a theory of class operations? Do we have to go to hyperclasses (classes of classes)? Is there any end to this expansion?
@@ -109,7 +115,7 @@ $$
 $$
 More in harmony with Scott (1980) would be: $F = \{(a,B) \mid  a,B \in V {\textrm { and } } a \in F(B)\}$.
 
-Either trick reduces operator theory to class theory - in the continuous case. And the same trick could be carried over to other kinds of set theory (e.g. Quine's). What we know is that operator theory gives a model for $\lambda$-calculus; it is a quite elementary model, too. Nice as this connection is, it is not the topic of the pre­ sent paper: we do not want to make $\lambda$-calculus depend on set theory, since then we have still to explain where set theory comes from. But the connection should be borne in mind.]
+Either trick reduces operator theory to class theory - in the continuous case. And the same trick could be carried over to other kinds of set theory (e.g. Quine's). What we know is that operator theory gives a model for $\l$-calculus; it is a quite elementary model, too. Nice as this connection is, it is not the topic of the pre­ sent paper: we do not want to make $\l$-calculus depend on set theory, since then we have still to explain where set theory comes from. But the connection should be borne in mind.]
 
 Perhaps set theory brings in too many extraneous issues. $V$, after all, is a massive object closed under all manner of strange operations. What we are probably seeking is a ``purer'' view of functions: a theory of functions in themselves, not a theory of functions derived from sets. What, then, is a pure theory of functions? Answer: category theory. General category theory is a very pure theory: it is the milk-and-water theory of functions under composition. This composition operation is associative and possesses neutral ele­ments (compositions of zero terms). That is about all you can say about it except to stress that it is also a rather bland theory of types. Every function $f$ has a (unique) domain and codomain, and we write:
 
@@ -139,7 +145,7 @@ $$
 The definition of composition is obvious. Sets, in this way, give us only one special example of a category.
 I beg forgiveness of the reader for boring him. All of this is well known to the moderately awake undergraduate in mathe­matics. Indeed, that is the point: there is plenty of evi­dence now that category theory is a natural and useful theory of functions. I do not have to rehearse the examples as they can be found in any number of books (e.g. Mac Lane (1971]).
 There is a rather important logical point to stress, however
-important for anyone who has thought about $\lambda$-calculus models. Category theory is very extensional. We assume as axioms the equations:
+important for anyone who has thought about $\l$-calculus models. Category theory is very extensional. We assume as axioms the equations:
 %
 $$\id_A \comp f = f \comp \id_B =  f$$
 %
@@ -152,8 +158,8 @@ Furthermore, identical things can everywhere replace one another.
 This point about extensionality may not seem exciting or im­portant, but the logician should remember that, in certain intensional theories of functions, ``obvious'' definitions will not provide categories. We shall return to this point later. But is category theory the long-sought answer? No, no, not at all. Category theory {\it pure} provides nothing explicitly aside from identity functions --- and they occur only if we have some possible domain. We do get compositions if we have the neces­sary terms. Thus, as it stands, category theory has no existential import. (It was not meant to.) Set theory has "too much" existential import. (It was meant to.) What we seek is the middle way --- and an argument that the middle way is natural and general.
 
 There is no need to build up unnecessary suspense: the middle way is the theory of the (so called) cartesian closed categories.
-Fortunately Lambek has written extensively about the theory, and I can refer the reader to his papers for fur­ther details; I also am happy to acknowledge his writings as helping me understand what is going on. If we remark that his paper in this volume is called "From $\lambda$-calculus to cartesian closed categories'', then we might say that my present paper ought to be called ``From cartesian closed categories to $\lambda$-calculus.'' 
-I am trying to find out where $\lambda$-calculus should come from, and the fact that the notion of a cartesian closed category (c.c.c) is a late developing one (Eilenberg \& Kelly (1966)), is not relevant to the argument: I shall try to explain in my own words in the next section why we should look to it {\it first}.
+Fortunately Lambek has written extensively about the theory, and I can refer the reader to his papers for fur­ther details; I also am happy to acknowledge his writings as helping me understand what is going on. If we remark that his paper in this volume is called "From $\l$-calculus to cartesian closed categories'', then we might say that my present paper ought to be called ``From cartesian closed categories to $\l$-calculus.'' 
+I am trying to find out where $\l$-calculus should come from, and the fact that the notion of a cartesian closed category (\ccc) is a late developing one (Eilenberg \& Kelly (1966)), is not relevant to the argument: I shall try to explain in my own words in the next section why we should look to it {\it first}.
 
 \section{A Theory of Types}
 
@@ -171,8 +177,8 @@ A map $f : A^2 \to B$ in this category has to be a group homomor­phism, natural
 Intuitively we think in terms of elements and that we are map­ping $x \mapsto u(x)$ and $y \mapsto v(y)$. The pointwise group product of the maps, namely, $x,y \mapsto  u(x) \cdot v(y)$ is a very nice map $g : A^2 \to B$ in the ordinary sense --- but unless the group $B$ is abelian, $g$ is not a homomorphism. It is a ``logical'' map but not an ``algebra­ic'' map. Pure category theory applies to many algebraic situa­tions (as everyone knows that is why it is a good theory), but not all categories are ``logical'' even if they have products. In the example of groups, what was "missing" was the group 
 multiplication $\mu: B^2 \to B$ as a map in the category. (Inverse is missing as well, since it reverses order.) There is an in­teresting theory of algebraic theories that address the ques­tion of the proper categorial construction of categories of al­gebras, but I do not think we should invoke that theory here.
 
-The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\bbzero_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\bbzero_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation 
-$$f = \bbzero_A .$$
+The precise description of products is as follows. We as­sume our category has a special domain $\bbone$ (the empty product, so $A^0 = B^0 = {\bbone}$), and for each domain $A$ a special map $\zeromap_A: A \mapsto \bbone$. (The domain $\bbone$, intuitively, has just one ``element''.)  Moreover the rule about maps is that $\zeromap_A$ is unique; that is whenever $f : A \mapsto \bbone$, then we have the equation 
+$$f = \zeromap_A .$$
 %
 Concerning binary products, we have for any two domains $A$ and $B$ a special choice of a domain $A \times B$ (and so $A^{n+1} = A^n \times A$), and special maps
 \begin{align*}
@@ -199,34 +205,107 @@ that is to say, there is an explicit one-one correspondence between the pairs of
 
 So much for a theory of tuples and multiary maps. But we still want a theory of functions: a category allows us to talk of selected functions, while we would want various equations to have a force relating to arbitrary functions. The answer to this desire is function spaces as explicit domains in the cate­ gory. Given $A$ and $B$ we want to form $(A \to B)$ as a domain in its own right; if so, there are many maps that have to be set down to make the function space behave. (And here we must defi­nitely leave the category of groups.)
 
-\def\ebc{\epsilon_{BC}}
-
 In the first place there has to be an evaluation map
 $\ebc : (B \to C) \times B \to C$ with the intuitive interpretation that it is the map $ f,x \mapsto f(x)$. In the second place there has to be a map for shifting around variables; more precisely, suppose
 $h: A\times B \to C$ is a map with two arguments. In an evaluation $h(x,y)$, we can think of holding $x$ constant and regarding $h(x,y)$ as a function of $y$. We need a name for this function --- and for the correspondence with possible values of x. We write
 $$
-\Lambda_{ABC}\, h : A\times B -> C
+\L_{ABC}\, h : A\times B -> C
 $$
 %
 so that the function we were thinking of --- given $x$ --- was
-$(\Lambda_{ABC} h)\, (x)$. But all this function-value notation is not cate­gorical notation; what we have to say is that there is a one­ one correspondence via $\Lambda$ between maps $h : A\times B \to C$ and maps $k: A \to (B \to C)$. This comes down to these two equations:
+$(\L_{ABC} h)\, (x)$. But all this function-value notation is not cate­gorical notation; what we have to say is that there is a one­ one correspondence via $\L$ between maps $h : A\times B \to C$ and maps $k: A \to (B \to C)$. This comes down to these two equations:
 %
 \begin{align*}
-\epsilon \comp \langle (\Lambda h)\comp p, q\rangle &= h, {\textrm{ and}} \\
-\Lambda(\epsilon \comp \langle k \comp p, q \rangle) &= k.
+\ep \comp \langle (\L h)\comp p, q\rangle &= h, {\textrm{ and}} \\
+\L(\ep \comp \langle k \comp p, q \rangle) &= k.
 \end{align*}
 %
-(It is necessary to have subscripts here: $\Lambda_{ABC}$, $p_{AB}$, $q_{AB}$, and $\epsilon_{BC}$; but we leave them off when there is no ambiguity.)
+(It is necessary to have subscripts here: $\L_{ABC}$, $p_{AB}$, $q_{AB}$, and $\ebc$; but we leave them off when there is no ambiguity.)
 
-The notation is now wholly categorical (and mostly unread­ able). Category theorists put the whole thing (that is, the definition of a {c.c.c.}, which is what we have just given) into the language of functors, which has a lot of sense. But if you have never seen any abstract category theory before, it is really rather too abstract. The idea of a c.c.c. as a system of types is, I think, reasonably simple. Each {c.c.c.} repre­sents a theory of functions. The maps in the category are cer­tain special functions that are used to express the relations between the types (the domains of the category). In order to
+The notation is now wholly categorical (and mostly unread­able). Category theorists put the whole thing (that is, the definition of a \ccc, which is what we have just given) into the language of functors, which has a lot of sense. But if you have never seen any abstract category theory before, it is really rather too abstract. The idea of a \ccc\ as a system of types is, I think, reasonably simple. Each \ccc repre­sents a theory of functions. The maps in the category are cer­tain special functions that are used to express the relations between the types (the domains of the category). In order to
 be able to deal with multiary functions, we assume we can form
 (and analyze) products. In order to be able to work with trans­formations of arbitrary functions (``arbitrary'' within the the­ory), we assume we can form function spaces: this is where ``higher'' types enter the theory, as in the sequence of domains:
 $$
 A, (A \to A), ((A \to A) \to A), (((A \to A) \to A) \to A), \cdots
 $$
-To be able really to view these domains as function spaces, cer­tain operations, E and A, with characteristic equations have to be laid down.
-If a {c.c.c.} is a theory of functions (and we include here higher-type functions), then the theory of {c.c.c}'s is the the­ory of types of the title of this section. It is only one such theory. ``Bigger'' theories could be obtained by demanding more types: for example we could axiomatize {\it coproduct}s (disjoint sums), $\bbzero$ and $A+ B$. We could demand infinite products and co­ products. We could throw in a type 
+To be able really to view these domains as function spaces, cer­tain operations, $\ep$ and $\L$, with characteristic equations have to be laid down.
+If a \ccc\ is a theory of functions (and we include here higher-type functions), then the theory of \ccc's is the the­ory of types of the title of this section. It is only one such theory. ``Bigger'' theories could be obtained by demanding more types: for example we could axiomatize {\it coproduct}s (disjoint sums), $\bbzero$ and $A+ B$. We could demand infinite products and co­ products. We could throw in a type $\Omega$ of ``propositions'' so that higher types like $(A^n \to \Omega)$ correspond to $n$-ary predicates. This gets into topos theory (as in Johnstone (1977) or Goldblatt (1979) --- just to name two recent texts). But the bigger the theory, the more involved, and full definitions at this point would not help this discussion very much.
+We could also look for ``smaller'' theories. Some examples --- of a rather highly formal nature --- can be found in Szabo (1978) with an indication of the algebraic interest of these other type theories. However, a \ccc\ is rather more ``logical'' and good as a middle ground; further Lambek has explained the logical interest; there is a perfect correspondence between \ccc's and (extensional) typed $\l$-calculi. The reader can turn to Lam­bek's paper for details and references.
 
+\def\means#1{\llbracket\, #1 \,\rrbracket}
+
+Roughly put, when we formally define the typed A-language (with types in the given \ccc), then if $\tau$ is a typed $\l$-expression with free variables of types $A^0, A^1,\cdots, A^{n-1}$ we can de­ fine the ``meaning'' of $\tau$ as a map
+%
+$$
+\means{\tau}: A_0 \times A_1 \times \dots A_{n-1} \to B
+$$
+%
+where $B$ is the type of $\tau$. For example if $u$ is a variable of type $(B \to C)$ and $v$ a variable of type $B$, then
+$$
+\means{u(v)}: (B \to C) \times B \to C,
+$$
+%
+and in fact $\means{u(v)} = \ebc$. Also if $x$ is the variable in $\tau$ of type $A_{n-1}$ then
+$$
+\means{\lm{x}.\, \tau}: A_0 \times A_1 \times \dots A_{n-2} \to (A_{n-1} \to B),
+$$
+%
+and in fact $\means{\l x.\, \tau} = \L\means{\tau}$. (Warning: for other of the vari­ables that are not the last mentioned, it is not so easy to write down the answer: some permutations of the products have to be introduced.)
+
+The two characteristic equations for $\ep$ and $\L$ in the axioms for a \ccc, have very familiar translations:
+\begin{align*}
+( \lm{y}. h(x,y))(y') &= h(x,y') \quad and \\
+\lm{y}. k(x)(y) &= k(x),
+\end{align*}
+%
+where the type of $x$ is $A$, the type of $y$ and of $y'$ is $B$. (That is to say, the $\means{\cdot}$-meaning of the two sides of the equation is
+the same map in the category.) Of course this all has to be defined more rigorously, but I hope I have conveyed the main part of the idea of Lambek's correspondence. A typed $\l$-calculus (with pairs, products, and function spaces) is just another notation for a {c.c.c}.
+
+No, we have to be more specitic than that. Take a \ccc\ How does it correspond to a theory (of functions)? The domains
+of the category are the types of the theory, and they are struc­tured by the $\bbone$, $(A \times B)$, $(A\to B)$ operations on types. Things like $\comp$,
+$0$, $p$, $q$, $\langle\cdot,\cdot\rangle$, $\ep$, and $\L$ stand for logical constants (or op­erators) --- with type subscripts as needed. Maps $f : A\to B$ of the category stand for the non-logical constants of the theory.
+The equations $f = g$ between maps are the assertions of the the­ory. The logical axioms are those special equations common to all \ccc's --- the other equations are those that just happen to work out in the category. From this point of view the the­ory has no free variables: all assertions are written with constant terms. Equations with free variables can be construed as functional equations (by a heavy use of $\L$).
+
+Conversely, a more conventional typed $\l$-calculus is an equa­tional theory with both the familiar logical axioms as well as with non-logical axioms as desired. The equations can involve free variables. Aside from the usual deduction rules for equa­lity, we must employ the extensionality rule
+$$
+\inferrule
+  {\tau = \sigma}
+  {\l x .\, \tau = \l x .\, \sigma}
+$$
+%
+A category is formed from the types (which are {\it given} as closed under $\bbone$, $(A \times B)$, $(A \to B)$). The terms all have unambiguous
+types, and they are divided into equivalence classes by the theory. As the maps of the category we take the equivalence classes $\br{\lm{x}.\tau}$ where the term $\tau$ of type $B$ has at most the variable $x$ of type $A$ free, and we write $\br{\lm{x}.\tau} : A \to B$. Of course
+\begin{align*}
+\id_A &= \br{\lm{x}.x}, \, \textrm{and}\\
+\br{\lm{y}.\sigma} \comp \br{\lm{x}.\tau} &= \br{\lm{x}.\sigma(\tau/y)}
+\end{align*}
+where $\tau$ is substituted for $y$ in $\sigma$. We must verify that a cate­gory is obtained --- using the laws of $\l$-calculus.  And we must
+see that if we go back again to a $\l$-calculus from the category we have essentially the same theory.
+
+A \ccc\ (or typed $\l$-calculus - with non-logical axioms) is a satisfactory (extensional) theory of functions because all we have built into the theory is the idea of the product and the function space. The axioms set down are just those needed to make this structuring explicit.
+The reason that category theory is a convenient way to for­malize this definition is that starting from the especially el­ementary concept of maps under composition, we can see that we have done nothing more than close up under products and func­tion spaces. $\l$-calculus, then, becomes mostly a notational de­ vice for setting down our functional equations. At least for typed $\l$-calculus, we can see in this way that it is harmless.
+
+The typed $\l$-calculus is even more harmless than these last remarks suggested. By the well-known Yoneda embedding, one can prove that an arbitrary (small) category has a full and faith­ful embedding into a \ccc\ This means that starting with a given category and its maps, there is a precise sense in which it is consistent to close up under products and function spaces. No new maps are added co the given category; no new equations between the given maps are imposed by the adjunction of higher types. One can say even more than this about rela­ tive consistency, but the remark is best deferred to Section 4, where references to the proof are provided.
+
+A final remark must be added to this section to clear up a possible confusion between theories and models.
+Up to this point we have been talking about theories. In many systems of logic models can be described by theories: every model has a ``diagram'' involving constants for all the "elements" of the model and taking as axioms all statements in the language ``true'' about the model. It depends on the na,ture of the logic how hard it is to show that every ``consistent'' theory has a model.
+
+In the case of a \ccc, a domain $A$ could be said to have an ``element'' $a$ if there is a map $a: \bbone \to A$. The question is: {\it are there enough elements}? Suppose $f,g: A\to B$ are two maps. If $a : \bbone \to A$, then $f \comp a: \bbone \to B$; so in a certain sense maps in the category behave as functions on elements. (This is not an original suggestion but is one well known in category theory.) It is natural to ask whether, if  $f \comp a	= g\comp a$ for all $a : \bbone \to A$, then $f = g$. If this is true in a \ccc, then it is said to have ```enough''' elements or to be concrete. In case it is concrete, domains can be identified with sets, maps with func­tions, products $A \times B$ in the category with the corresponding cartesian product of the sets (ask: which $c : \bbone \to A \times B$?), and function spaces $(A \to B)$ with spaces of actual functions (be­ cause there is a one-one correspondence between maps $f : A \to B$ and elements $e: \bbone \to (A \to B)$.
+
+For a theory in the form of a \ccc, to ask whether it has a (non-trivial) model is to ask whether it can be expanded to a concrete \ccc\ by the adjunction of elements (and other maps and additional equations, but no new domains) which is non­ trivial in the sense of not making all domains isomorphic to $\bbone$.
+
+An answer --- though perhaps a rather formal one --- is supplied by the method of adjunction of indeterminates $x: \bbone \to A$ pre­sented in Lambek's paper (this volume). We just have to adjoin infinitely many for each domain, one after the other. Each polynomial involves only finitely many indeterminates. But the results stated by Lambek (esp. Corollary to Theorem 2) show us at once that this expanded category is concrete. The idea is really just like the idea of having ``free algebras'' for any equational theory. (In $\l$-calculus an algebraic equation that is regarded as universally quantified, say $x + y = y + x$, is replaced by the functional equation
+$$
+\l x \l y . \, x + y = \l x \l y . \, y + x.
+$$
+%
+More thoughts on concreteness will be brought out in Section 4.
+
+That is the (easy) passage from theories to (certain) models.
+But remember, a theory is not a model: the maps in a given
+\ccc\ are not concrete maps, they are just the definable maps in the language of the theory, and the equations between them are the ``theorems'' of the theory. It is no surprise that a given theory may not have enough definable elements: we may need to expand the stock of elements in order to have a model. For a \ccc\ we find we can. So far, so good; and this is the (known) story of typed $\l$-calculus.
+
+\section{``Type Free'' Domains}
 
 
 
